tests: rules, remove SomeTestFile and update toml file

--- a/src/jbackup/tests/_testrule.toml
+++ b/src/jbackup/tests/_testrule.toml
@@ -1,3 +1,6 @@
 [copy]
-dest.dir = "/home/buff"
-dest.file = "dest.ext"
+dest.file = "file"
+dest.dir = "/dir"
+
+[test]
+message = "This is the message."
