tests: actions, Update properties of test action
Includes changes to the rule file as well

--- a/src/jbackup/tests/_testrule.toml
+++ b/src/jbackup/tests/_testrule.toml
@@ -3,4 +3,5 @@ dest.file = "file"
 dest.dir = "/dir"
 
 [test]
-message = "This is the message."
+message = "Action 'test' message."
+extra-message = "Action 'test' extra message."
