--- a/.coveragerc
+++ b/.coveragerc
@@ -5,7 +5,7 @@ exclude_lines =
     @overload
     class .*Protocol
     def main.*
-    def _.*
+    def _[a-zA-Z]+.*
     if __name__ == "__main__"
     if TYPE_CHECKING
     [a-zA-Z_].* [ \t]*=[ \t]*.*
