--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "jbackup"
 version = "1.0-alpha1"
 authors = [
-	{
-		name = "John Russell",
-		email = "johndevlopment7@gmail.com"
-	}
+	{ name = "John Russell", email = "johndevlopment7@gmail.com" }
 ]
 description = "Extensible backup system"
 readme = "README.md"
