--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.10"
 classifiers = [
 	    "Programming Language :: Python :: 3",
 	    "Programming Language :: Python :: 3.10",
-	    "License :: OSI Approved :: MIT License",
+	    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 	    "Operating System :: OS Independent"
 ]
 dynamic = ["version"]
