--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
+tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
 
 [build-system]
 requires = ["poetry-core"]
