--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ readme = "README.md"
 python = ">=3.10"
 tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
