--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10"
 tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
+tomli-w = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
