--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = ">=3.10"
 tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
 tomli-w = "^1.0.0"
+platformdirs = "^4.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
