--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "jbackup"
-version = "1.0b1"
+version = "2.0a1"
 description = "Extensible backup system"
 authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
 license = "GPLv3"
