--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10"
 tomli = {markers = "python_version < \"3.11\"", version = "^2.0.1"}
 tomli-w = "^1.0.0"
 platformdirs = "^4.2.2"
+typer = "^0.12.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
